[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "packet-mapper"
version = "0.1.0"
description = "Web-based packet sniffer that links connections onto a map"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "scapy>=2.5.0",
    "requests>=2.32.0",
    "websockets>=12.0",
    "geoip2>=4.6.0",
]

[project.scripts]
packet-mapper = "packet_mapper.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/packet_mapper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
